# reichtum

./: Cargo.toml  README.md  cards.csv  nobles.csv
examples/: self_play.rs
scripts/: analyze_self_play.py
src/: agent.rs  api.rs  data_types.rs  game_state.rs  lib.rs  player.rs
