[package]
name = "reichtum"
version = "0.1.11"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2021"

[dependencies]
csv = "1.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polars = { version = "0.26", features = ["describe", "lazy", "list_eval", "rank"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"